@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-29T08:19:36Z",
-  "count_outdated" : 385,
-  "uniques_outdated" : 241,
-  "count" : 412,
-  "uniques" : 257,
+  "timestamp" : "2022-07-30T01:24:09Z",
+  "count_outdated" : 388,
+  "uniques_outdated" : 243,
+  "count" : 415,
+  "uniques" : 258,
   "clones" : [
-    {
-      "timestamp": "2022-07-15T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-07-16T00:00:00Z",
       "count": 4,
@@ -84,8 +77,8 @@
     },
     {
       "timestamp": "2022-07-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
