@@ -3,11 +3,6 @@
   "uniques": 5,
   "clones": [
     {
-      "timestamp": "2022-07-15T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-07-16T00:00:00Z",
       "count": 4,
       "uniques": 4
@@ -59,7 +54,7 @@
     },
     {
       "timestamp": "2022-07-29T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
